@@ -135,6 +135,7 @@ wxMSW:
 - Fix quoting of arguments passed to wxExecute(char **) (Brian Ravnsgaard Riis).
 - Support disabling items before adding them to the menu (Christian Walther).
 - Allow to call SetFont(wxNullFont) to reset the font to default.
+- Implement UUID::operator==() and !=() (SQLAware).
 
 wxGTK:
 
